# backend-engineering-challenge

./: .gitignore  README.md  pyproject.toml
resources/: data.jsonl
tests/: fixtures.py  test_ma_service.py
unbabel_cli/: cli.py  constants.py  data.py  models.py  services.py
