[tool.poetry]
name = "unbabel-cli"
version = "0.1.0"
description = "Command line application that processes a stream of translation events."
authors = ["Goncalo Filipe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unbabel-cli = "unbabel_cli.cli:app"